feat(docker): add jupyter service to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,40 @@
 services:
-    api:
-        container_name: api
-        hostname: api
-        build:
-            context: ./docker/dev
-        working_dir: /app
-        command: python -m uvicorn src.main:app --host $API_HOST --port $API_PORT --reload
-        tty: true
-        env_file: .env
-        environment:
-        - PYTHONPATH=/app/src
-        volumes:
-        - .:/app:delegated
-        - home:/home/$LOCAL_USER_NAME
-        ports:
-        - $API_PORT:$API_PORT
-        networks:
-        - api-network
+  jupyter:
+    image: quay.io/jupyter/datascience-notebook:python-3.11
+    container_name: jupyter
+    hostname: hostname
+    working_dir: /app
+    env_file: .env
+    ports:
+    - 8888:8888
+    volumes:
+    - .:/app:delegated
+    - home:/home/$LOCAL_USER_NAME
+    networks:
+    - api-network
+
+
+  api:
+    container_name: api
+    hostname: api
+    build:
+      context: ./docker/dev
+    working_dir: /app
+    command: python -m uvicorn src.main:app --host $API_HOST --port $API_PORT --reload
+    tty: true
+    env_file: .env
+    environment:
+    - PYTHONPATH=/app/src
+    volumes:
+    - .:/app:delegated
+    - home:/home/$LOCAL_USER_NAME
+    ports:
+    - $API_PORT:$API_PORT
+    networks:
+    - api-network
 
 volumes:
-    home:
+  home:
 
 networks:
-    api-network:
+  api-network:
