feat(env): add data origin url and data structure
Add type in settings props

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ API_HOST='0.0.0.0'
 API_PORT=8000
 API_JWT_SECRET='jwtsecret'
 API_DATA_FOLDER_PATH='/app/data/raw'
+API_DATA_ORIGIN_URL='http://vitibrasil.cnpuv.embrapa.br/download/'
