--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
         "context": ".."
     },
     "runArgs": [
-        "--env-file", ".env"
+        "--name", "${localWorkspaceFolderBasename}"
     ],
     "workspaceMount": "source=.,target=/app,type=bind,consistency=cached",
     "workspaceFolder": "/app",
@@ -34,7 +34,8 @@
                 "streetsidesoftware.code-spell-checker",
                 "streetsidesoftware.code-spell-checker-portuguese-brazilian",
                 "christian-kohler.path-intellisense",
-                "redhat.vscode-yaml"
+                "redhat.vscode-yaml",
+                "tamasfe.even-better-toml"
             ]
         }
     }
