--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     container_name: jupyter
     hostname: jupyter
     working_dir: /app
-    env_file: .env
     ports:
     - 8888:8888
     volumes:
@@ -19,11 +18,12 @@ services:
       dockerfile: ./.devcontainer/Dockerfile
       context: .
     working_dir: /app
-    command: python -m uvicorn src.main:app --host $API_HOST --port $API_PORT --reload
+    user: vscode
+    command: poetry run python -m uvicorn src.main:app --host '0.0.0.0' --port 8000 --reload
     volumes:
     - .:/app
     ports:
-    - $API_PORT:$API_PORT
+    - 8001:8000
     networks:
     - techchallenge-network
 
